# voisona-talk-proxy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: test_cli.py  test_client.py  test_proxy_api.py
voisona_talk_proxy/: cli.py  client.py  proxy.py  schemas.py
voisona_talk_proxy/static/playground/: app.js  index.html  styles.css
